# python-ai-roadmap

./: README.md  app.js  index.html  templates.js
Claude Apps/python-ai-roadmap/phase1/module-a/: README.md  game.py  main.py  pyproject.toml  utils.py
Claude Apps/python-ai-roadmap/phase1/module-a/tests/: test_utils.py
Claude Apps/python-ai-roadmap/phase2/module-g/: .pre-commit-config.yaml  README.md  analysis.ipynb  pyproject.toml  utils.py
Claude Apps/python-ai-roadmap/phase2/module-g/.github/workflows/: ci.yml
Claude Apps/python-ai-roadmap/phase2/module-g/data/: sales.csv
Claude Apps/python-ai-roadmap/phase2/module-g/tests/: test_utils.py
Claude Apps/python-ai-roadmap/phase2/module-h/: .pre-commit-config.yaml  README.md  app.py  charts.py  pyproject.toml
Claude Apps/python-ai-roadmap/phase2/module-h/.github/workflows/: ci.yml
Claude Apps/python-ai-roadmap/phase2/module-h/tests/: test_charts.py
Claude Apps/python-ai-roadmap/phase2/module-i/: .gitignore_append  .pre-commit-config.yaml  README.md  app.py  predict.py  pyproject.toml  train.py
Claude Apps/python-ai-roadmap/phase2/module-i/.github/workflows/: ci.yml
Claude Apps/python-ai-roadmap/phase2/module-i/tests/: test_predict.py
Claude Apps/python-ai-roadmap/phase2/module-j/: .gitignore  README.md  app.py  evaluate.py  pyproject.toml  train.py
Claude Apps/python-ai-roadmap/phase2/module-j/tests/: test_evaluate.py
Claude Apps/python-ai-roadmap/phase2/module-k/: .gitignore  README.md  app.py  conftest.py  download_data.py  features.py  pipeline.py  pyproject.toml  train.py
Claude Apps/python-ai-roadmap/phase2/module-k/tests/: test_features.py
Claude Apps/python-ai-roadmap/phase2/module-l/: .gitignore  README.md  app.py  model.py  predict.py  pyproject.toml  train.py
Claude Apps/python-ai-roadmap/phase2/module-l/tests/: test_model.py
Claude Apps/python-ai-roadmap/phase3/module-m/: .env.example  .gitignore  README.md  app.py  client.py  prompts.py  pyproject.toml  summariser.py
Claude Apps/python-ai-roadmap/phase3/module-m/tests/: test_client.py
Claude Apps/python-ai-roadmap/phase4/module-y/: .gitignore  README.md  app.py  message_bus.py  orchestrator.py  pyproject.toml
Claude Apps/python-ai-roadmap/phase4/module-y/agents/: analyst.py  base.py  checker.py  searcher.py  writer.py
Claude Apps/python-ai-roadmap/phase4/module-y/tests/: test_agents.py
OneDrive/Claude Apps/doc-struct/: index.html  renderForm.js  style.css
