[project]
name = "module-g"
version = "0.1.0"
description = "Phase 2 Module G — Sales EDA with NumPy + Pandas"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "jupyter>=1.1",
    "nbconvert>=7.16",
    "matplotlib>=3.9",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "mypy>=1.14",
    "ruff>=0.9",
    "pre-commit>=4.1",
    "pandas-stubs>=2.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=utils --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
source = ["utils"]

[tool.mypy]
strict = true
python_version = "3.12"
ignore_missing_imports = false

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "PTH"]
ignore = ["E501"]
