[project]
name = "module-i"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "scikit-learn>=1.4",
    "pandas>=2.2",
    "numpy>=1.26",
    "streamlit>=1.33",
    "joblib>=1.4",
    "plotly>=5.22",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "--cov=predict --cov=train --cov-report=term-missing --cov-fail-under=80"

[tool.mypy]
python_version = "3.12"
strict         = true
ignore_missing_imports = true

[tool.ruff.lint]
select = ["E", "F", "I"]
