[project]
name = "module-j"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "scikit-learn>=1.4",
    "pandas>=2.0",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "streamlit>=1.35",
    "joblib>=1.3",
    "imbalanced-learn>=0.12",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
addopts = "--cov=evaluate --cov-report=term-missing --cov-fail-under=80"
testpaths = ["tests"]
